--- a/.github/workflows/leakcheck.yml
+++ b/.github/workflows/leakcheck.yml
@@ -12,12 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.2
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
     - name: Go Test
       env:
         CC: clang
