--- a/.github/workflows/v8upgrade.yml
+++ b/.github/workflows/v8upgrade.yml
@@ -10,30 +10,24 @@ jobs:
         name: Upgrade V8
         runs-on: ubuntu-20.04
         steps:
-            - name: Checkout
-              uses: actions/checkout@v2
+            - uses: actions/checkout@v3
               with:
-                  submodules: true
-                  fetch-depth: 0
-            - uses: actions/setup-python@v2
+                submodules: true
+                fetch-depth: 0
+            - uses: actions/setup-python@v4
               with:
                 python-version: '3.8'
-            - name: Update depot_tools fetch config
-              run: cd deps/depot_tools && git config --unset-all remote.origin.fetch; git config --add remote.origin.fetch +refs/heads/*:refs/remotes/origin/*
+            - run: cd deps/depot_tools && git config --unset-all remote.origin.fetch; git config --add remote.origin.fetch +refs/heads/*:refs/remotes/origin/*
               shell: bash
-            - name: Add depot_tools to PATH
-              run: echo "$PWD/deps/depot_tools" >> $GITHUB_PATH
+            - run: echo "$PWD/deps/depot_tools" >> $GITHUB_PATH
               shell: bash
-            - name: Run upgrade script
-              run: cd deps && python upgrade_v8.py
-            - name: Create PR metadata
-              id: pr_metadata
+            - run: cd deps && python upgrade_v8.py
+            - id: pr_metadata
               run: |
                 echo "pr_branch=v8_$(cat deps/v8_version)_upgrade" >> $GITHUB_OUTPUT
                 echo "pr_commit_message=Upgrade V8 binaries for $(cat deps/v8_version) version" >> $GITHUB_OUTPUT
                 echo "pr_body=Auto-generated pull request to upgrade V8 binary for $(cat deps/v8_version) version" >> $GITHUB_OUTPUT
-            - name: Create PR
-              uses: peter-evans/create-pull-request@v3
+            - uses: peter-evans/create-pull-request@v4
               with:
                 commit-message: ${{steps.pr_metadata.outputs.pr_commit_message}}
                 branch: ${{steps.pr_metadata.outputs.pr_branch}}
