fix: lint errors

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,8 @@ run:
   skip-files:
     - ".*_mock\\.go$"
     - "\\.pb\\.go$"
+  skip-dirs:
+    - "deps"
 
 output:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
@@ -31,6 +33,7 @@ linters-settings:
   dupl:
     threshold: 100
   goconst:
+    ignore-tests: true
     min-len: 2
     min-occurrences: 2
   goimports:
